test/files/neg/t200.check
t200.scala:7: error: method foo is defined twice in t200.scala
  def foo: Int;
      ^
one error found
